# TensorDB

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENTERPRISE_ASSESSMENT.md  LICENSE  README.md  TEST_PLAN.md  design.md  docker-compose.yml  perf.md
.github/workflows/: ci.yml  docs.yml  publish-crates.yml  publish-docker.yml  release.yml
benches/: basic.rs  comparative.rs  inference.rs  multi_engine.rs
crates/spectradb-cli/: Cargo.toml
crates/spectradb-cli/src/: main.rs
crates/spectradb-core/: Cargo.toml
crates/spectradb-core/src/: config.rs  error.rs  lib.rs  native_bridge.rs
crates/spectradb-core/src/ai/: inference.rs  mod.rs
crates/spectradb-core/src/cluster/: mod.rs  replication.rs  scaling.rs
crates/spectradb-core/src/engine/: db.rs  fast_write.rs  mod.rs  shard.rs
crates/spectradb-core/src/facet/: fts.rs  mod.rs  relational.rs  timeseries.rs  vector_ops.rs
crates/spectradb-core/src/io/: mod.rs  uring.rs
crates/spectradb-core/src/ledger/: internal_key.rs  record.rs
crates/spectradb-core/src/sql/: eval.rs  exec.rs  mod.rs  parser.rs  planner.rs
crates/spectradb-core/src/storage/: cache.rs  columnar.rs  compaction.rs  group_wal.rs  levels.rs  manifest.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
crates/spectradb-core/src/util/: mod.rs  varint.rs
crates/spectradb-native/: Cargo.toml  build.rs
crates/spectradb-native/cpp/: native.cc  native.h
crates/spectradb-native/src/: lib.rs
crates/spectradb-node/: Cargo.toml
crates/spectradb-node/src/: lib.rs
crates/spectradb-python/: Cargo.toml
crates/spectradb-python/src/: lib.rs
crates/tensordb-cli/: Cargo.toml
crates/tensordb-cli/src/: main.rs
crates/tensordb-core/: Cargo.toml
crates/tensordb-core/src/: config.rs  error.rs  ffi.rs  lib.rs  native_bridge.rs
crates/tensordb-core/src/ai/: access_stats.rs  anomaly.rs  cache_advisor.rs  compaction_advisor.rs  gguf.rs  llm.rs  ml_pipeline.rs  mod.rs  query_advisor.rs  sampler.rs  schema_cache.rs  speculation.rs  sql_grammar.rs  tokenizer.rs  tool_calling.rs  transformer.rs
crates/tensordb-core/src/ai/kernels/: avx2.rs  mod.rs  scalar.rs
crates/tensordb-core/src/auth/: audit.rs  mod.rs  rbac.rs  rls.rs  session.rs
crates/tensordb-core/src/cdc/: consumer_group.rs  cursor.rs  mod.rs
crates/tensordb-core/src/cluster/: membership.rs  raft.rs  scaling.rs
crates/tensordb-core/src/engine/: db.rs  mod.rs  pool.rs  shard.rs  speculative_write.rs
crates/tensordb-core/src/facet/: event_sourcing.rs  fts.rs  graph.rs  mod.rs  relational.rs  schema_evolution.rs  timeseries.rs  vector_hybrid.rs  vector_ivf.rs  vector_ops.rs  vector_persistence.rs  vector_quantization.rs  vector_search.rs  vector_temporal.rs
crates/tensordb-core/src/io/: uring.rs
crates/tensordb-core/src/ledger/: internal_key.rs  mod.rs  record.rs
crates/tensordb-core/src/sql/: compiled_expr.rs  eval.rs  exec.rs  learned_cost.rs  mod.rs  parser.rs  plan_guide.rs  planner.rs  vectorized.rs
crates/tensordb-core/src/storage/: adaptive_compression.rs  bloom.rs  cache.rs  columnar.rs  compaction.rs  encryption.rs  fractal_index.rs  group_wal.rs  key_manager.rs  levels.rs  manifest.rs  memtable.rs  mod.rs  object_store.rs  predictive_prefetch.rs  self_healing.rs  sstable.rs  temporal_bloom.rs  wal.rs  zone_map.rs
crates/tensordb-core/src/util/: metrics.rs  mod.rs  time.rs  varint.rs
crates/tensordb-distributed/: Cargo.toml
crates/tensordb-distributed/proto/: tensor_cluster.proto
crates/tensordb-distributed/src/: config.rs  error.rs  lib.rs  node.rs
crates/tensordb-distributed/src/consensus/: mod.rs  raft.rs
crates/tensordb-distributed/src/discovery/: gossip.rs  health.rs  mod.rs
crates/tensordb-distributed/src/rebalance/: migrator.rs  mod.rs  throttle.rs
crates/tensordb-distributed/src/replication/: mod.rs  wal_shipper.rs
crates/tensordb-distributed/src/routing/: distributed_db.rs  mod.rs  shard_router.rs
crates/tensordb-distributed/src/txn/: coordinator.rs  mod.rs  participant.rs  txn_log.rs
crates/tensordb-native/: Cargo.toml  build.rs
crates/tensordb-native/cpp/: native.cc
crates/tensordb-native/include/: tensordb_native.h
crates/tensordb-native/src/: lib.rs
crates/tensordb-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/tensordb-node/src/: lib.rs
crates/tensordb-python/: Cargo.toml  README.md  pyproject.toml  tensordb.pyi
crates/tensordb-python/src/: lib.rs
crates/tensordb-python/tensordb_cli/: __init__.py
crates/tensordb-server/: Cargo.toml
crates/tensordb-server/src/: handler.rs  health.rs  main.rs  pgwire.rs
docs/: astro.config.mjs  package-lock.json  package.json
docs/plans/: 2026-02-25-pre-publish-fixes.md  2026-02-28-eoac-critical-gaps-design.md  2026-02-28-eoac-implementation-plan.md
docs/src/assets/: custom-theme.css
docs/src/components/: ArchitectureDiagram.astro  CodeTabs.astro  ConfigExplorer.astro  FeatureCard.astro  Hero.astro  (+3 more)
examples/: ai_native.rs  bitemporal.rs  quickstart.rs
examples/express_app/: index.js
examples/fastapi_app/: app.py
scripts/: ai_overhead_gate.sh  benchmark_matrix.sh  benchmark_summary.sh  convert_to_gguf.sh  eval_nl2sql.py  finetune_nl2sql.py  generate_training_data.py  overnight_iterate.sh  release_ai_report.sh  sqlite_baseline.sh
src/: lib.rs
tests/: advanced_sql.rs  ai_core.rs  ai_sql_functions.rs  audit_log.rs  auth_rbac.rs  backup_dry_run.rs  bitemporal.rs  change_feeds.rs  compaction_history.rs  compaction_scheduling.rs  data_interchange.rs  enterprise_evaluation.rs  enterprise_security.rs  epoch_core.rs  error_codes.rs  event_sourcing.rs  fts_sql.rs  gdpr_erasure.rs  index_acceleration.rs  inference_engine.rs  llm_nl2sql.rs  llm_tool_calling.rs  multilevel_compaction.rs  observability.rs  online_ddl.rs  parquet_interchange.rs  phase1_features.rs  plan_stability.rs  prefix_scan.rs  query_engine_perf.rs  readme_examples.rs  reopen_cycles.rs  resource_limits.rs  row_level_security.rs  schema_evolution.rs  sql_completeness.rs  sql_completeness_v033.rs  sql_correctness.rs  sql_expressions.rs  sql_facet.rs  (+18 more)
(+59 files in other folders)
