[package]
name = "tensordb"
version = "0.2.0"
edition = "2021"
description = "TensorDB — single-node, append-only, bitemporal ledger database with MVCC snapshot reads and SQL facet"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/tensor-db/tensorDB"
keywords = ["database", "bitemporal", "mvcc", "embedded", "ledger"]
categories = ["database-implementations"]

[workspace]
members = [
  ".",
  "crates/tensordb-core",
  "crates/tensordb-native",
  "crates/tensordb-cli",
  "crates/tensordb-server",
  "crates/tensordb-distributed",
  "crates/tensordb-python",
  "crates/tensordb-node",
]
default-members = [
  ".",
  "crates/tensordb-core",
  "crates/tensordb-cli",
  "crates/tensordb-server",
]
resolver = "2"

[features]
default = ["llm"]
native = ["tensordb-core/native"]
simd = ["tensordb-core/simd"]
io-uring = ["tensordb-core/io-uring"]
parquet = ["tensordb-core/parquet"]
llm = ["tensordb-core/llm"]

[dependencies]
tensordb-core = { path = "crates/tensordb-core" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sled = "0.34"
redb = "2"
fastrand = "2"
half = "2"
tensordb-core = { path = "crates/tensordb-core" }

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "multi_engine"
harness = false

[[bench]]
name = "inference"
harness = false
