[package]
name = "spectradb-cli"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI shell for SpectraDB with TAB completion, output modes, and AI features"
license = "MIT"
repository = "https://github.com/spectra-db/SpectraDB"

[features]
default = []
native = ["spectradb-core/native"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "14"
serde_json = "1"
spectradb-core = { path = "../spectradb-core" }
