[package]
name = "spectradb-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
native = ["dep:spectradb-native"]
simd = []
io-uring = ["dep:io-uring"]

[dependencies]
thiserror = "1"
crc32fast = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
fastrand = "2"
tracing = "0.1"

spectradb-native = { path = "../spectradb-native", optional = true }
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3"
