[package]
name = "spectradb-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for SpectraDB — an AI-native, bitemporal ledger database with MVCC, full SQL, and LSM storage"
license = "MIT"
repository = "https://github.com/spectra-db/SpectraDB"
keywords = ["database", "embedded", "bitemporal", "sql", "lsm"]
categories = ["database-implementations"]

[features]
default = []
native = ["dep:spectradb-native"]
simd = []
io-uring = ["dep:io-uring"]
parquet = ["dep:parquet", "dep:arrow"]

[dependencies]
thiserror = "1"
crc32fast = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
fastrand = "2"
tracing = "0.1"
lz4_flex = "0.11"

spectradb-native = { path = "../spectradb-native", optional = true }
io-uring = { version = "0.7", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "54", optional = true, default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3"
