[package]
name = "tensordb-core"
version = "0.2.0"
edition = "2021"
description = "Core engine for TensorDB — an AI-native, bitemporal ledger database with MVCC, full SQL, and LSM storage"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/tensor-db/tensorDB"
keywords = ["database", "embedded", "bitemporal", "sql", "lsm"]
categories = ["database-implementations"]

[features]
default = ["llm"]
native = ["dep:tensordb-native"]
io-uring = ["dep:io-uring"]
parquet = ["dep:parquet", "dep:arrow"]
llm = ["dep:dirs", "dep:ureq", "dep:rayon"]
encryption = ["dep:aes-gcm"]

[dependencies]
thiserror = "1"
crc32fast = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
fastrand = "2"
tracing = "0.1"
lz4_flex = "0.11"
rust_decimal = { version = "1", features = ["serde-with-str"] }
half = "2"
aes-gcm = { version = "0.10", optional = true }

tensordb-native = { path = "../tensordb-native", optional = true }
io-uring = { version = "0.7", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "54", optional = true, default-features = false, features = ["json"] }
dirs = { version = "5", optional = true }
ureq = { version = "2", optional = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
