[package]
name = "tensordb-distributed"
version = "0.2.0"
edition = "2021"
description = "Distributed layer for TensorDB: gRPC routing, 2PC transactions, online rebalancing"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
tensordb-core = { path = "../tensordb-core", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
fastrand = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
