[package]
name = "tensordb-python"
version = "0.3.0"
edition = "2021"

[lib]
name = "tensordb"
crate-type = ["cdylib"]

[features]
default = ["llm"]
llm = ["tensordb-core/llm"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tensordb-core = { path = "../tensordb-core" }
serde_json = "1"
