[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tensordb"
version = "0.2.3"
description = "AI-native, bitemporal ledger database with MVCC, SQL, and LSM storage"
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.8"
keywords = ["database", "bitemporal", "mvcc", "embedded", "ledger", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
]

[project.scripts]
tensordb = "tensordb_cli:main"

[project.urls]
Homepage = "https://github.com/tensor-db/tensorDB"
Repository = "https://github.com/tensor-db/tensorDB"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tensordb"
manifest-path = "Cargo.toml"
python-packages = ["tensordb_cli"]
