[package]
name = "tensordb-server"
version = "0.2.0"
edition = "2021"
description = "PostgreSQL wire protocol server for TensorDB"
license = "PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "tensordb-server"
path = "src/main.rs"

[dependencies]
tensordb-core = { path = "../tensordb-core" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
md-5 = "0.10"
serde_json = "1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
